Style general Stats on tablet 768 & fix chart!! center it finally!!!

--- a/src/sass/sections/_generalStats.scss
+++ b/src/sass/sections/_generalStats.scss
@@ -99,12 +99,19 @@
   /* Chart */
 
   .general-stats__chart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: 50%;
+    /*
     max-width: 50%;
     text-align: left;
     //text-align: center;
     margin: 0, auto, 30px;
     margin-bottom: 30px;
-
+    */
     img {
       max-width: 100%;
     }
@@ -155,6 +162,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: auto;
+    width: 50%;
   }
 
   .general-stats__chart-img {
@@ -169,8 +178,17 @@
 
 // medium
 @media (min-width: 768px) and (max-width: 991px) {
+  .general-stats {
+    margin-left: 270px;
+  }
+
+  .general-stats__heading {
+    display: flex;
+    justify-content: center;
+  }
+
   .general-stats__4-numbers {
-    display: block;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -181,13 +199,18 @@
   }
 
   .general-stats__chart {
-    display: block;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: auto;
+    width: 50%;
   }
 
   .general-stats__chart-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     margin-left: 5px;
   }
